--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Lab8-Starter",
     "short_name": "Anya, Clarissa, Dhruv",
     "description": "Recipe Cards",
-    "start_url": "./Lab8-Starter/",
+    "start_url": "./",
     "display": "fullscreen",
     "background_color": "grey",
     "theme_color": "red",
@@ -31,41 +31,6 @@
         "src": "/assets/images/icons/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
-      },
-      {
-        "src": "/assets/images/icons/arrow-down.png",
-        "sizes": "any",
-        "type": "image/png"
-      },
-      {
-        "src": "/assets/images/icons/0-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/1-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/2-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/3-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/4-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/5-star.svg",
-        "sizes": "any",
-        "type": "image/svg"
       }
     ]
   }
